bubble/manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bubble
  name: bubble
  namespace: bubble
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bubble
