bubble/manifest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bubble
  name: bubble
  namespace: bubble
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bubble
